# fullstack-litestar-svelte

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  copier.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: render-sample.py
template/: .copier-answers.yml.jinja  .env.example.jinja  .env.jinja  .gitignore.jinja  .pre-commit-config.yaml  Makefile.jinja  README.md.jinja  compose.prod.yaml.jinja  compose.yaml.jinja  justfile.jinja  pyproject.toml.jinja
template/.github/workflows/: ci.yml.jinja
template/backend/: .dockerignore  Dockerfile.jinja  README.md.jinja  pyproject.toml.jinja
template/backend/migrations/versions/: 996da65e9ea7_initial.py
template/backend/src/{{ package_name }}/: __main__.py.jinja  app.py.jinja  config.py.jinja
template/backend/tests/: conftest.py.jinja
template/backend/tests/integration/: test_db.py.jinja  test_items.py.jinja  test_users.py.jinja
template/backend/tests/unit/: test_auth.py.jinja  test_health.py.jinja  test_security.py.jinja
template/deploy/nginx/: nginx.conf.jinja
template/frontend/: .dockerignore  Dockerfile  README.md.jinja  components.json  package.json.jinja  playwright.config.ts  vite.config.ts
template/frontend/e2e/: fullstack.e2e.ts  home.e2e.ts
template/frontend/src/: app.css  app.html.jinja  hooks.server.test.ts  hooks.server.ts
template/frontend/src/lib/: config.ts.jinja  testing.d.ts
template/scripts/: e2e-stack.sh
tests/: conftest.py  test_backend_generation.py  test_deploy_generation.py  test_frontend_generation.py  test_generation.py
(+29 files in other folders)
